feat: мобильная версия

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,42 @@
     </div>
     <!-- /.header__nav -->
 
-    
+    <div id="mobile-menu" class="mobile-menu">
+      <div class="mobile-menu__overlay"></div>
+
+      <div class="mobile-menu__container">
+        <nav class="nav nav--mobile">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="">О компании</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Застройщикам</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Государственным учреждениям</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Коммерчиским организациям</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Объекты</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- /.nav -->
+      </div>
+      <!-- /.mobile-menu__container -->
+    </div>
+    <!-- /.mobile-menu -->
   </header>
 
 <!-- Основной контент -->
@@ -230,7 +265,8 @@
         <!-- /.hero__wrapper -->
 
         <picture class="hero__picture">
-          <img src="img/layout/page/index/hero/picture.png" alt="">
+          <source srcset="img/layout/page/index/hero/picture.png" media="(min-width: 768px)" />
+          <img src="img/layout/page/index/hero/picture--mobile.png" alt="">
         </picture>
 
         <div class="hero__action">
@@ -283,8 +319,8 @@
       <!-- /.section__header -->
 
       <div class="catalog">
-        <div class="row gy-5">
-          <div class="col-3">
+        <div class="row gy-3 gy-lg-5">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/1.jpg" alt="">
@@ -296,7 +332,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/2.jpg" alt="">
@@ -308,7 +344,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/3.jpg" alt="">
@@ -320,7 +356,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/4.jpg" alt="">
@@ -332,7 +368,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/5.jpg" alt="">
@@ -344,7 +380,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/6.jpg" alt="">
@@ -356,7 +392,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/7.jpg" alt="">
@@ -368,7 +404,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-catalog">
               <picture class="card-catalog__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/catalog/8.jpg" alt="">
@@ -402,8 +438,12 @@
         <!-- /.section__header -->
 
         <div class="manufacturing__video">
-          <img class="manufacturing__preview" src="img/layout/page/index/manufacturing/laptop.png" alt="">
-          <img class="manufacturing__play" src="img/icons/control/play.svg" alt="">
+          <div class="manufacturing__wrapper">
+            <img class="manufacturing__preview" src="img/layout/page/index/manufacturing/laptop.png" alt="">
+            <img class="manufacturing__play" src="img/icons/control/play.svg" alt="">
+          </div>
+          <!-- /.manufaturing__videowrapper -->
+
           <span class="manufacturing__label">Видео по изготовлению стеклопакетов</span>
         </div>
         <!-- /.manufacturing__video -->
@@ -415,7 +455,6 @@
         </p>
       </div>
       <!-- /.manufacturing -->
-
     </div>
     <!-- /.container -->
   </section>
@@ -584,8 +623,8 @@
         </div>
         <!-- /.portfolio__advantage -->
 
-        <div class="row gy-5">
-          <div class="col-3">
+        <div class="row gy-4 gy-lg-5">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/1.jpg" alt="">
@@ -600,7 +639,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/2.jpg" alt="">
@@ -615,7 +654,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/3.jpg" alt="">
@@ -630,7 +669,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/4.jpg" alt="">
@@ -645,7 +684,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/1.jpg" alt="">
@@ -660,7 +699,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/2.jpg" alt="">
@@ -675,7 +714,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="card-portfolio">
               <picture class="card-portfolio__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/portfolio/3.jpg" alt="">
@@ -690,7 +729,7 @@
           </div>
           <!-- /.col-3 -->
 
-          <div class="col-3">
+          <div class="col-6 col-lg-3">
             <div class="portfolio__more">
               Ещё больше объектов
               <img src="img/icons/misc/arrow--big.svg" alt="">
@@ -724,12 +763,12 @@
           Купить их можно по следующим адресам:
         </p>
 
+        <img src="img/layout/page/index/buy/map.jpg" alt="" class="buy__picture">
+
         <div class="buy__action">
           <a href class="button button-primary">Открыть карту с адресами</a>
         </div>
         <!-- /.buy__action -->
-
-        <img src="img/layout/page/index/buy/map.jpg" alt="" class="buy__picture">
       </div>
       <!-- /.buy -->
     </div>
@@ -746,8 +785,8 @@
       <!-- /.section__header -->
 
       <div class="article-block">
-        <div class="row">
-          <div class="col-4">
+        <div class="row gy-5 gy-lg-0">
+          <div class="col-12 col-lg-4">
             <div class="card-article">
               <picture class="card-article__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/article/1.jpg" alt="">
@@ -767,7 +806,7 @@
           </div>
           <!-- /.col-4 -->
 
-          <div class="col-4">
+          <div class="col-12 col-lg-4">
             <div class="card-article">
               <picture class="card-article__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/article/2.jpg" alt="">
@@ -787,7 +826,7 @@
           </div>
           <!-- /.col-4 -->
 
-          <div class="col-4">
+          <div class="col-12 col-lg-4">
             <div class="card-article">
               <picture class="card-article__picture lazy">
                 <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/article/3.jpg" alt="">
@@ -812,6 +851,11 @@
         <a href="" class="article-block__link">
           <img src="img/layout/page/index/article-block/ellipse.svg" alt="">
         </a>
+
+        <div class="article-block__action">
+          <button class="button button-primary">Другие статьи</button>
+        </div>
+        <!-- /.article-block__action -->
       </div>
       <!-- /.article-block -->
     </div>
@@ -859,7 +903,7 @@
         <!-- /.footer__logo -->
 
         <div class="row">
-          <div class="col-5">
+          <div class="col-12 col-lg-5">
             <div class="footer__nav">
               <div class="footer__heading">ЧАСТНЫМ КЛИЕНТАМ</div>
 
@@ -895,7 +939,7 @@
           </div>
           <!-- /.col-5 -->
 
-          <div class="offset-1 col-6">
+          <div class="col-12 offset-lg-1 col-lg-6">
             <div class="footer__callback">
               <div class="footer__heading">По вопросам сотрудничества:</div>
 
@@ -950,7 +994,7 @@
             Официальный сайт компании ФабрикантЪ Стеклопакеты.
           </div>
 
-          <div class="footer__offer">
+          <div class="footer__offer mb-3 mb-lg-0">
             Информация на данном сайте не является публичной офертой и носит
             <br>
             исключительно информационный характер
